--- a/src/webparts/backToTop/components/BackToTop.module.scss
+++ b/src/webparts/backToTop/components/BackToTop.module.scss
@@ -1,14 +1,18 @@
-@import '~office-ui-fabric-react/dist/sass/References.scss';
+@import "~office-ui-fabric-react/dist/sass/References.scss";
 
-.backToTop {
+.backToTopWrapper {
     position: fixed;
     border-radius: 5px;
-    padding: 15px;
     cursor: pointer;
     z-index: 99999;
+    
+    .backToTop {
+        height: 20px;
+        width: 20px;
 
-    .icon {
-        color: #fff;
-        font-size: 20px;
+        .icon {
+            color: #fff;
+            font-size: 18px;
+        }
     }
 }
